Added call record support
